# vqwBat_ws

./: .gitignore  vqwBat_ws.code-workspace
src/BQ25820/: CMakeLists.txt  package.xml
src/BQ25820/include/BQ25820/: BQ25820.hpp  BQ25820_Registers.hpp  BQ25820_i2c.hpp  elapsedMillis.h  visibility_control.h  vwq_debug.hpp
src/BQ25820/src/: BQ25820.cpp  elapsedMillis.cpp
src/bq25820_hardware_interface/: CMakeLists.txt  bq25820_hardware_interface.xml  package.xml
src/bq25820_hardware_interface/include/bq25820_hardware_interface/: bq25820_hardware_interface.hpp  visibility_control.h
src/bq25820_hardware_interface/src/: bq25820_hardware_interface.cpp  elapsedMillis.cpp
src/bq25820_node/: CMakeLists.txt  package.xml
src/bq25820_node/include/bq25820_node/: bq25820_node.hpp  visibility_control.h
src/bq25820_node/src/: bq25820_node.cpp
